<?xml version="1.0"?>
<package format="2">
  <name>odva_ethernetip</name>
  <version>0.1.5</version>
  <description>Library implementing ODVA EtherNet/IP (Industrial Protocol).</description>

  <license>BSD</license>
  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
  <author email="kareem@shehata.ca">Kareem Shehata</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>rclcpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>